- changes to make possible parallel work of different PrologParser objects with the same ParserContext - some corrections in API - pom.xml has been corrected